# Retrieved from https://github.com/sdispater/poetry
[tool.poetry]
name = "Theia"
version = "0.0.1"
description = "The description of the package"
license = "LGPL-3.0+"
authors = ["Mike van Sighem <mikevansighem@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/mikevansighem/theia/"
homepage = "https://mikevansighem.github.io/theia/"
documentation = "https://mikevansighem.github.io/theia/"
keywords = ['lighting', 'mqtt']


[tool.poetry.dependencies]
# Compatible python versions
python = "^3.6"

# Normal dependencies
arrow="^0.12"
paho-mqtt="^1.4"
pvlib="^0.6"

# Optional/extra dependencies for docs
mkdocs = {version = "^1.0", optional = true}
mkdocs-material = {version = "^3.0", optional = true}
pygments = {version = "^2.2", optional = true}
pymdown-extensions = {version = "^6.0", optional = true}


[tool.poetry.dev-dependencies]
codacy-coverage = "^1.3"
coverage ="^4.5"
flake8= "^3.6"
flake8-docstrings= "^1.3"
flake8-import-order= "^0.17"
pep8-naming= "^0.7"
pre-commit= "^1.12"
#tox= "^3.5"
pytest= "^3.9"
pytest-cov= "^2.6"


# Defines extras
[tool.poetry.extras]
docs = ["mkdocs","mkdocs-material", "pygments", "pymdown-extensions "]


[tool.poetry.scripts]
my-script = 'theia:__main__'


# Specifies tools for building
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# Retrieved from: https://github.com/ambv/black/blob/master/pyproject.toml
[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
